--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "arrowParens": "always",
-  "printWidth": 80,
+  "printWidth": 100,
   "semi": true,
   "singleQuote": true,
-  "tabWidth": 2,
   "trailingComma": "all",
-  "useTabs": false
+  "arrowParens": "always",
+  "tabWidth": 2,
+  "useTabs": false,
+  "plugins": ["./node_modules/prettier-plugin-import-sort"]
 }
