--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:style": "stylelint './src/**/*.{js,css,ts,tsx}'"
   },
   "dependencies": {
-    "reflect-form": "^0.1.1"
+    "reflect-form": "^0.1.2"
   },
   "peerDependencies": {
     "effector": "^21.8.0",
@@ -47,7 +47,8 @@
     "eslint": "^7.20.0",
     "express": "^4.17.1",
     "patronum": "^1.1.0",
-    "prettier": "^2.2.1",
+    "prettier": "2.2.1",
+    "prettier-plugin-import-sort": "^0.0.6",
     "razzle": "^3.3.9",
     "razzle-plugin-typescript": "^3.3.9",
     "react": "^17.0.1",
@@ -69,7 +70,7 @@
     "typescript": "^4.1.3",
     "webpack": "^4.0.0",
     "webpack-cli": "^4.6.0",
-    "woly": "^0.6.0"
+    "woly": "^0.10.0"
   },
   "repository": {
     "type": "git",
