chore: add correct eslint config

--- a/package.json
+++ b/package.json
@@ -17,11 +17,6 @@
     "lint:style": "stylelint './src/**/*.{js,css,ts,tsx}'"
   },
   "dependencies": {
-    "@eslint-kit/base": "^1.0.0",
-    "@eslint-kit/node": "^1.0.0",
-    "@eslint-kit/prettier": "^1.0.0",
-    "@eslint-kit/react": "^1.0.0",
-    "@eslint-kit/typescript": "^1.0.1",
     "reflect-form": "^0.1.2"
   },
   "peerDependencies": {
@@ -35,6 +30,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@effector/reflect": "^0.6.0",
     "@eslint-kit/eslint-config-base": "^3.0.0",
+    "@eslint-kit/eslint-config-node": "^2.0.0",
     "@eslint-kit/eslint-config-prettier": "^2.0.0",
     "@eslint-kit/eslint-config-react": "^2.1.0",
     "@eslint-kit/eslint-config-typescript": "^3.2.0",
