--- a/.eslintrc
+++ b/.eslintrc
@@ -1,41 +1,31 @@
 {
-    "extends": [
-        "@eslint-kit/base",
-        "@eslint-kit/typescript",
-        "@eslint-kit/node",
-        "@eslint-kit/react",
-        "@eslint-kit/prettier",
-        "./.config/eslint-config"
-    ],
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
+  "extends": [
+    "@eslint-kit/base",
+    "@eslint-kit/typescript",
+    "@eslint-kit/node",
+    "@eslint-kit/react",
+    "@eslint-kit/prettier"
+  ],
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
         "project": "./tsconfig.json"
-    },
-    "settings": {
-        "import/parsers": {
-            "@typescript-eslint/parser": [
-                ".ts",
-                ".tsx"
-            ]
-        },
-        "import/resolver": {
-            "typescript": {
-                "project": "./tsconfig.json"
-            },
-            "alias": [
-                [
-                    "lib",
-                    "./src/lib"
-                ],
-                [
-                    "icons",
-                    "./src/static/icons"
-                ]
-            ]
-        }
-    },
-    "rules": {
-        "import/order": "off"
+      },
+      "alias": [
+        ["lib", "./src/lib"],
+        ["icons", "./src/static/icons"]
+      ]
     }
+  },
+  "rules": {
+    "import/order": "off"
+  }
 }
